# AI-Engineer

./: .dockerignore  .gitignore  CLAUDE.md  README.md  capacitor.config.ts  index.html  main.py  mkdocs.template.yml  mkdocs.yml  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements-netlify.txt  streamlit_app.py
copilot/mkdocs/: CHANGELOG_SUMMARY.md  IMPLEMENTATION_SUMMARY.md
docs/: 00_Artifact.md  00_pocs.md  02_lab.md
docs/00_temp/: 05_AI_challenges.md
docs/01_AWS_AIF-C01/: 01_GenAI.md
docs/02_agentic_ai/: 01_MCP.md
docs/02_kodeKloud/02_01_AgenticAI/: 00_kickOff.md  00_no-coding-ai-workflow-tools.md  03_MCP-protocol.md
docs/2025/: README.md  readme.md
docs/2025/01_AWS_AIF-C01/: 00_01_kickOff.md  01_02_ML.md  01_03_DL.md  02_01_GEN-AI.md  02_02_LLM.md  02_03_prompt-Engineering.md  02_04_challenges.md
docs/2025/02_AgenticAI/: 00_LLM_provider.md  00_UV.md  01_01_context_eng.md  01_02_RAG.md  02_02_Agentic-AI_workflow.md  03_01_MCP.md  03_02_MCP_KK_lab-1.md  04_01_MCP_security.md
docs/2025/02_KK_AgenticAI/: 00_no-coding-ai-workflow-tools.md  02_01_AI_Application.md  02_01_LAM_workflow.md  02_02_Agentic-AI_workflow.md  03_01_MCP.md  03_02_MCP_POC-1.md  03_MCP-protocol.md  04_Agentic_workflows.md
docs/2026/: README.md
docs/2026/01_AWS-AIF-C01/: README.md
docs/2026/02_AgenticAI/: 00_Agentic_ai.md  01_04_vector.md  01_AI_funda.md  01_context_window.md  02_02_Agentic-AI_workflow.md  02_03_context_eng.md  02_05_langchain.md  02_langchain.md  03_01_MCP.md  03_51_MCP_KK_lab-1.md  04_01_RAG.md  04_02_CAG.md  04_03_AgenticRAG.md  04_04_Multi-Query-RAG.md  04_05_hirarchical_RAG.md  04_vector.md  05_01_langGraph.md  05_RAG.md  06_langgraph.md  07_MCP.md  README_LABS.md
docs/98_poc/: poc_2_rag.md
docs/poc/: poc_1_cb.md  poc_2_rag.md
ios/: README.md
ios/App/: Podfile
ios/App/App/: Info.plist  (+1 more)
ios/capacitor-cordova-ios-plugins/: CordovaPlugins.podspec  CordovaPluginsStatic.podspec
metadata/: kodekloud_videos.json
scripts/: generate_mkdocs.bat  generate_mkdocs.py
src/: App.tsx  native.ts  styles.css
src/01_chatbot/: readme.md
(+417 files in other folders)
