# toml
[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.14.3",
    "mcp[cli]>=1.25.0",
    "openai>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22",
    "requests>=2.28",
    "python-dotenv>=1.0.0",
    "chromadb",
    "sentence_transformers",
    "langchain",
    "langchain_openai",
    "langchain-core",
    "langchain-mcp-adapters",
    "duckduckgo-search",
    "google-api-python-client>=2.198.0",
    "pydantic>=1.10",
    "firebase-admin>=7.5.0",
]

[project.optional-dependencies]
dev = [
    "pipreqs>=0.4.11",
]
