# toml
[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.14.3",
    "mcp[cli]>=1.25.0",
    "openai>=1.0.0",
    "fastapi>=0.95",
    "uvicorn[standard]>=0.22",
    "requests>=2.28",
    "python-dotenv>=1.0",
    "chromadb",
    "sentence_transformers",
    "langchain",
    "langchain-openai>=1.0,<2.0",
    "langchain-core>=1.4,<2.0",
    "langchain-mcp-adapters",
    "duckduckgo-search",
    "google-api-python-client>=2.198.0",
    "pydantic>=2.0",
    "firebase-admin>=6.5",
    "langchain-groq>=1.0,<2.0",
    "langgraph>=1.0.7,<1.1",
    "psycopg[binary,pool]>=3.2,<4",
    "langchain-google-genai>=4.0,<5.0",
]

[project.optional-dependencies]
dev = [
    "pipreqs>=0.4.11",
]
